# PFE_licences

./: CLAUDE.md  DATABASE_STRUCTURE.md  PROJECT_FEATURE_PLAN.md  docker-compose.yml  project workflow.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/v1/: __init__.py  auth.py  deps.py  health.py  users.py
backend/app/core/: jwt.py  state_machine.py
backend/app/db/: base.py
backend/app/models/: application.py  audit_log.py  license.py  license_key.py  license_transition.py  notification.py  plan.py  refresh_token.py  usage_record.py  user.py  webhook.py
backend/app/schemas/: auth.py  common.py  user.py
backend/app/services/: audit_service.py  auth_service.py
backend/tests/: test_auth.py  test_jwt.py  test_security.py  test_state_machine.py  test_users.py
frontend/src/: App.tsx
